Fix whitespace bug
- Added css to body in order to fix whitespace bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,19 +2,16 @@ body,html{
   height: 100%;
   width: 100%;
   margin: 0;
-}
-
-html{
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 body{
   background: linear-gradient(to bottom right, #2e3a4e, #71747ab4), url("https://res.cloudinary.com/knallcloud/image/upload/v1540018400/PortfolioImages/BG_03.png") no-repeat center; 
-  background-size: cover; 
+  background-size: auto; 
   margin: 0;
-  min-height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  transform: translate3d(0,0,0);  
 }
 
 .horizontalLine{ 
